--- a/style.css
+++ b/style.css
@@ -102,8 +102,8 @@ input{
             
         width: 60%;
         background-color: rgb(90, 90, 6);
-        /* height: 27%; */
-        /* padding-left: 25px; */
+       height: auto;
+       
         }
         
     
@@ -113,7 +113,7 @@ input{
         }
 
         input{
-            width: 590px;
+            width: 470px;
         }
 
     }
@@ -145,8 +145,9 @@ input{
 
         #main{
             
-        /* width: 60%; */
+        
         background-color: rgb(119, 11, 58);
+        height: auto;
        
         }
         button{
