--- a/style.css
+++ b/style.css
@@ -57,7 +57,8 @@ input{
 
     #main{
         
-    width: 50%;
+        width: auto;
+        height: auto;
     background-color: rgb(22, 22, 21);
     height: 27%;
     padding-left: 5px;
@@ -100,7 +101,7 @@ input{
 
         #main{
             
-        width: 60%;
+            width: auto;
         background-color: rgb(90, 90, 6);
        height: auto;
        
@@ -124,8 +125,8 @@ input{
 
 
     #main{
-        
-           width: 40%;
+            
+        width: auto;
           background-color: rgb(24, 175, 100);
    
          }
@@ -145,7 +146,7 @@ input{
 
         #main{
             
-        
+        width: auto;
         background-color: rgb(119, 11, 58);
         height: auto;
        
